# schwerclass

./: ARCHITECTURE.md  README.md  pyproject.toml
scenarios/: air_handler_condensate_fault.json  cargo_imbalance_before_warp.json  co2_scrubber_underperformance.json  emergency_lighting_transfer_failure.json  getter_jam_approaching.json  nominal_cruise.json  o2_cassette_failure_reroute.json  propulsion_hot_section_overheating.json  radiator_damage_thermal_derating.json  warp_authorization_failed_metrology.json
src/schwer_sim/: __init__.py  app.py  core.py  model.py  persistence.py  sim.py
tests/: test_sim.py
