[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schwer-sim"
version = "0.1.0"
description = "Desktop-first engineering simulation for the Schwer Class Freighter"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
